; ModuleID = '/home/carl/AnghaBench/mpv/player/extr_client.c_mpv_get_sub_api.c'
source_filename = "/home/carl/AnghaBench/mpv/player/extr_client.c_mpv_get_sub_api.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { %struct.TYPE_5__* }
%struct.TYPE_5__ = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @mpv_get_sub_api(%struct.TYPE_6__* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca %struct.TYPE_6__*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  store %struct.TYPE_6__* %0, %struct.TYPE_6__** %4, align 8
  store i32 %1, i32* %5, align 4
  %7 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %8 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %7, i32 0, i32 0
  %9 = load %struct.TYPE_5__*, %struct.TYPE_5__** %8, align 8
  %10 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %14, label %13

13:                                               ; preds = %2
  store i8* null, i8** %3, align 8
  br label %22

14:                                               ; preds = %2
  store i8* null, i8** %6, align 8
  %15 = load i32, i32* %5, align 4
  switch i32 %15, label %19 [
    i32 128, label %16
  ]

16:                                               ; preds = %14
  %17 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %18 = call i8* @opengl_cb_get_context(%struct.TYPE_6__* %17)
  store i8* %18, i8** %6, align 8
  br label %20

19:                                               ; preds = %14
  br label %20

20:                                               ; preds = %19, %16
  %21 = load i8*, i8** %6, align 8
  store i8* %21, i8** %3, align 8
  br label %22

22:                                               ; preds = %20, %13
  %23 = load i8*, i8** %3, align 8
  ret i8* %23
}

declare dso_local i8* @opengl_cb_get_context(%struct.TYPE_6__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
